[tool.poetry]
name = "cliffy"
version = "0.3.8"
description = "$ cli load from.yaml"
authors = ["Jay <jay.github0@gmail.com>"]
repository = "https://github.com/jaykv/cliffy"
readme = "README.md"
packages = [{include = "cliffy"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
pybash = "^0.3.4"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
deepmerge = "^1.1.0"
packaging = "^23.1"
shiv = "^1.0.3"
rich-click = { version = "^1.6.1", optional = true }
shellingham = { version = "^1.5.0.post1", optional = true }
pydantic = "^2.6.1"
typer-slim = "^0.12.3"
watchdog = "^4.0.1"

[tool.poetry.extras]
rich = ["rich-click", "shellingham"]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
ruff = "^0.0.254"
mypy = "^1.3.0"

[tool.poetry.scripts]
cli = "cliffy.run:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
enable_error_code = [
    "truthy-bool", 
    "truthy-iterable", 
    "redundant-expr",
    "unused-awaitable",
    "possibly-undefined",
    "redundant-self"
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
