[tool.poetry]
name = "cliffy"
version = "0.4.0"
description = "$ cli load from.yaml"
authors = ["Jay <jay.github0@gmail.com>"]
repository = "https://github.com/jaykv/cliffy"
readme = "README.md"
packages = [{include = "cliffy"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
pybash = "^0.3.4"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
deepmerge = "^1.1.0"
packaging = "^23.1"
shiv = "^1.0.3"
rich-click = { version = "^1.6.1", optional = true }
shellingham = { version = "^1.5.0.post1", optional = true }
pydantic = "^2.6.1"
typer-slim = "^0.12.3"
watchdog = "^4.0.1"

[tool.poetry.extras]
rich = ["rich-click", "shellingham"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
tabulate = "^0.9.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.11"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.6"
mkdocs-literate-nav = "^0.6.0"
mkdocs-git-committers-plugin-2 = "^2.4.1"

[tool.poetry.scripts]
cli = "cliffy.run:run"
cliffy = "cliffy.run:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
enable_error_code = [
    "truthy-bool", 
    "truthy-iterable", 
    "redundant-expr",
    "unused-awaitable",
    "possibly-undefined",
    "redundant-self"
]
disable_error_code = [
    "type-arg",
    "misc",
    "unused-ignore",
    "no-untyped-call",
    "no-any-return"
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
