[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliffy"
version = "0.5.2"
description = "$ cli load from.yaml"
authors = [{ name = "Jay", email = "jay.github0@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "deepmerge>=1.1.0",
    "jinja2>=3.1.2",
    "packaging>=23.1",
    "pybash>=0.3.4",
    "pydantic>=2.6.1",
    "pyyaml>=6.0",
    "shiv>=1.0.3",
    "typer-slim>=0.12.3",
    "watchdog>=4.0.1",
]

[project.optional-dependencies]
rich = [
    "rich-click>=1.6.1",
    "shellingham>=1.5.0"
]
ai = [
    "pydantic-ai>=0.0.19"
]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-pretty>=1.2.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.1",
    "tabulate>=0.9.0",
    "pytest-cov>=6.0.0"
]


[project.urls]
Documentation = "https://jaykv.github.io/cliffy/"
Repository = "https://github.com/jaykv/cliffy"

[project.scripts]
cli = "cliffy.run:run"
cliffy = "cliffy.run:run"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-pretty>=1.2.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.1",
    "tabulate>=0.9.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
docs = [
    "mkdocs-git-committers-plugin-2>=2.4.1",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.5.11",
    "mkdocs-material-extensions>=1.3.1",
    "pymdown-extensions>=10.6",
]
extras = [
    "pydantic-ai>=0.0.19",
    "rich-click>=1.6.1",
    "shellingham>=1.5.0"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
enable_error_code = [
    "truthy-bool", 
    "truthy-iterable", 
    "redundant-expr",
    "unused-awaitable",
    "possibly-undefined",
    "redundant-self"
]
disable_error_code = [
    "type-arg",
    "misc",
    "unused-ignore",
    "no-untyped-call",
    "no-any-return"
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# https://coverage.readthedocs.io/en/latest/config.html#run
[tool.coverage.run]
include = ["cliffy/**/*.py"]
omit = ["cliffy/clis/**"]
branch = true

# https://coverage.readthedocs.io/en/latest/config.html#report
[tool.coverage.report]
skip_covered = true
show_missing = true
ignore_errors = true
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@typing.overload',
    '@abstractmethod',
    '\(Protocol\):$',
    'typing.assert_never',
    '$\s*assert_never\(',
    'if __name__ == .__main__.:',
]

[tool.uv]
default-groups = ["dev", "docs", "extras"]
